--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,27 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>BenditaKa</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<html lang="pt">
+
+<meta charset="utf-8">
+<title>Bendita KA</title>
+<base href="/">
+<meta name="description" content="Testing angular architecture with micro applications approach">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet'>
+<meta property="og:url" content="https://saboresaude.stackblitz.io" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Angels Sabor & Saúde" />
+<meta property="og:description" content="A sua melhor opção de sabor & saúde" />
+<meta property="og:image" content="https://www.your-domain.com/path/image.jpg" />
+
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
