--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
 
 <body>
   <app-root></app-root>
-  <script src="runtime.js" defer></script>
-  <script src="polyfills.js" defer></script>
-  <script src="vendor.js" defer></script>
-  <script src="main.js" defer></script>
-  <script src="dist/runtime.js" defer></script>
-  <script src="dist/polyfills.js" defer></script>
-  <script src="dist/vendor.js" defer></script>
-  <script src="dist/main.js" defer></script>
+
+  <script src="bendita-ka/dist/runtime.js" defer></script>
+  <script src="bendita-ka/dist/polyfills.js" defer></script>
+  <script src="bendita-ka/dist/vendor.js" defer></script>
+  <script src="bendita-ka/dist/main.js" defer></script>
+</body>
+
 </body>
 
 </html>
