--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<link rel="stylesheet" href="bendita-ka/dist/styles.css">
+<link rel="stylesheet" href="dist/styles.css">
 <!doctype html>
 <html lang="pt">
 
 <meta charset="utf-8">
 <title>Bendita KA</title>
-<base href="/bendita-ka">
+<base href="/bendita-ka/">
 <meta name="description" content="Testing angular architecture with micro applications approach">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
