Changed base href

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta charset="utf-8">
 <title>Bendita KA</title>
-<base href="/bendita-ka/">
+<base href="/bendita-ka/dist">
 <meta name="description" content="Testing angular architecture with micro applications approach">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -23,10 +23,10 @@
 
 <body>
   <app-root></app-root>
-  <script src="dist/runtime.js" defer></script>
-  <script src="dist/polyfills.js" defer></script>
-  <script src="dist/vendor.js" defer></script>
-  <script src="dist/main.js" defer></script>
+  <script src="runtime.js" defer></script>
+  <script src="polyfills.js" defer></script>
+  <script src="vendor.js" defer></script>
+  <script src="main.js" defer></script>
 </body>
 
 </html>
