--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta charset="utf-8">
 <title>Bendita KA</title>
-<base href="/bendita-ka/dist">
+<base href="/bendita-ka">
 <meta name="description" content="Testing angular architecture with micro applications approach">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
