Changed base href

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
 <body>
   <app-root></app-root>
-  <script src="dist/runtime.js" defer></script>
-  <script src="dist/polyfills.js" defer></script>
-  <script src="dist/vendor.js" defer></script>
-  <script src="dist/main.js" defer></script>
+  <script src="bendita-ka/dist/runtime.js" defer></script>
+  <script src="bendita-ka/dist/polyfills.js" defer></script>
+  <script src="bendita-ka/dist/vendor.js" defer></script>
+  <script src="bendita-ka/dist/main.js" defer></script>
 </body>
 
 </html>
