--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="dist/styles.css">
+<link rel="stylesheet" href="dist/styles.32cfdaa18982a373d3bd.css">
 <!doctype html>
 <html lang="pt">
 
@@ -23,10 +23,11 @@
 
 <body>
   <app-root></app-root>
-  <script src="bendita-ka/dist/runtime.js" defer></script>
-  <script src="bendita-ka/dist/polyfills.js" defer></script>
-  <script src="bendita-ka/dist/vendor.js" defer></script>
-  <script src="bendita-ka/dist/main.js" defer></script>
+  <script src="bendita-ka/dist/runtime.821be7475ca33390a327.js" defer=""></script>
+  <script src="bendita-ka/dist/polyfills.00096ed7d93ed26ee6df.js" defer=""></script>
+  <script src="bendita-ka/dist/vendor.64c6eccb04d5dd978386.js" defer=""></script>
+  <script src="bendita-ka/dist/main.70bcd9681fa578b06770.js" defer=""></script>
+</body>
 </body>
 
 </html>
