--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
 <meta property="og:url" content="https://saboresaude.stackblitz.io" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Angels Sabor &amp; Saúde" />
-<meta property="og:description" content="A sua melhor opção de sabor &amp; saúde" />
-<meta property="og:image" content="https://www.your-domain.com/path/image.jpg" />
+<meta property="og:title" content="Angels Amor &amp; Sabor" />
+<meta property="og:description" content="A sua melhor opção de food delivery" />
+<meta property="og:image" content="https://randomcoggles.github.io/bendita-ka/dist/assets/images/pratos/img01.jpeg" />
 
 
 <body>
   <app-root></app-root>
-  <script src="bendita-ka/dist/runtime.821be7475ca33390a327.js" defer=""></script>
+  <script src="bendita-ka/dist/runtime.07354d7039d723bee57d.js" defer=""></script>
   <script src="bendita-ka/dist/polyfills.00096ed7d93ed26ee6df.js" defer=""></script>
   <script src="bendita-ka/dist/vendor.64c6eccb04d5dd978386.js" defer=""></script>
-  <script src="bendita-ka/dist/main.ef92781a94e35412d600.js" defer=""></script>
+  <script src="bendita-ka/dist/main.b05ae27c9ac8dc447441.js" defer=""></script>
 </body>
 </body>
 
