Improve price tag

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <script src="bendita-ka/dist/runtime.07354d7039d723bee57d.js" defer=""></script>
   <script src="bendita-ka/dist/polyfills.00096ed7d93ed26ee6df.js" defer=""></script>
   <script src="bendita-ka/dist/vendor.64c6eccb04d5dd978386.js" defer=""></script>
-  <script src="bendita-ka/dist/main.b05ae27c9ac8dc447441.js" defer=""></script>
+  <script src="bendita-ka/dist/main.b870950cb1fe0249004a.js" defer=""></script>
+</body>
 </body>
 </body>
 
